--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "start": "react-scripts start",
     "build": "CI= react-scripts build",
     "lint": "eslint .",
+    "lint-fix": "eslint . --fix",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
