--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint": "eslint .",
     "lint-fix": "eslint . --fix",
     "test": "react-scripts test",
+    "type:coverage": "type-coverage --detail",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
