--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "CI= react-scripts build",
-    "lint": "eslint .",
-    "lint-fix": "eslint . --fix",
+    "lint": "eslint ./src",
+    "lint-fix": "eslint ./src --fix",
     "test": "react-scripts test",
     "type:coverage": "type-coverage --detail",
     "eject": "react-scripts eject"
